--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   pull_request:
   push:
+    branches:
+      - 'main'
 
 jobs:
   unit-test:
@@ -10,7 +12,8 @@ jobs:
     uses: na4ma4/actions/.github/workflows/unit-test.yml@main
     with:
       enable-codecov: true
-    secrets: inherit
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   goreleaser:
     name: "Goreleaser"
@@ -19,4 +22,4 @@ jobs:
       - unit-test
     uses: na4ma4/actions/.github/workflows/goreleaser.yml@main
     secrets:
-      token: ${{ secrets.GO_RELEASER_GITHUB_TOKEN }}
+      GO_RELEASER_GITHUB_TOKEN: ${{ secrets.GO_RELEASER_GITHUB_TOKEN }}
